--- a/tc.html
+++ b/tc.html
@@ -51,7 +51,7 @@ h1 {
     margin-bottom: 25px;
 }
 
-/* TAB */
+/* TABS DE MÉTODO DE PAGO */
 .tabs {
     display: flex;
     margin-bottom: 20px;
@@ -92,7 +92,7 @@ input, select {
     box-sizing: border-box;
 }
 
-/* TARJETA */
+/* INPUT ESPECIAL PARA TARJETA */
 .input-card {
     position: relative;
 }
@@ -108,9 +108,10 @@ input, select {
 
 .card-icons img {
     height: 26px;
+    opacity: .9;
 }
 
-/* FECHA / CVV */
+/* FILA FECHA / CVV */
 .row-double {
     display: flex;
     gap: 15px;
@@ -119,28 +120,19 @@ input, select {
 
 .field-group {
     flex: 1;
+    min-width: 0;
 }
 
-/* CAJA DE PRECIO */
+/* CAJA PRECIO */
 #price-box {
-    background: linear-gradient(180deg, #0d0e10, #1b1c1f);
-    padding: 18px 20px;
-    border-radius: 12px;
-    margin-top: 30px;
-    border: 1px solid #292a2d;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.35);
-    text-align: center;
+    margin-top: 35px;
+    padding: 20px;
+    background: #141414;
+    border: 1px solid #2a2a2a;
+    border-radius: 10px;
 }
 
-/* RESUMEN PLAN */
-#planSummary {
-    margin-top: 14px;
-    font-size: 15px;
-    color: #d1d5db;
-    line-height: 1.6;
-}
-
-/* BOTÓN */
+/* BOTÓN FINAL */
 button {
     width: 100%;
     padding: 16px;
@@ -164,6 +156,12 @@ footer {
     font-size: 13px;
 }
 
+footer a {
+    color: #00c8ff;
+    text-decoration: none;
+}
+
+/* RESPONSIVE */
 @media (max-width: 480px) {
     .row-double {
         flex-direction: column;
@@ -181,19 +179,21 @@ footer {
     <a href="#">Cerrar sesión</a>
 </header>
 
-<!-- CONTENIDO -->
+<!-- CONTENIDO PRINCIPAL -->
 <div class="main-container">
 
     <div class="step">PASO 3 DE 3</div>
     <h1>¡A disfrutar!</h1>
 
+    <!-- TAB SOLO TARJETA -->
     <div class="tabs">
         <div class="tab active">Crédito/Débito</div>
     </div>
 
-    <!-- CAJA PRECIO -->
+    <!-- CAJA CON EL PLAN Y PRECIO -->
     <div id="price-box">
         <div style="color:#9ca3af; font-size:15px;">Total a pagar</div>
+
         <div id="finalPrice" style="
             margin-top: 6px;
             font-size: 26px;
@@ -201,13 +201,13 @@ footer {
             color: #00c8ff;
             text-shadow: 0 0 8px rgba(0,200,255,.35);
         "></div>
+
         <div id="planName" style="margin-top: 4px; font-size: 14px; color:#6b7280;"></div>
 
-        <!-- RESUMEN -->
-        <div id="planSummary"></div>
+        <div id="planSummary" style="margin-top:12px; font-size:14px; color:#9ca3af;"></div>
     </div>
 
-    <!-- FORMULARIO TARJETA -->
+    <!-- FORMULARIO -->
     <label>NOMBRE EN LA TARJETA</label>
     <input type="text" placeholder="Nombre del titular">
 
@@ -254,47 +254,40 @@ footer {
 
 <!-- FOOTER -->
 <footer>
-    © 2025 Disney+. Todos los derechos reservados. ·
+    © 2025 Disney+. Todos los derechos reservados. · 
     <a href="#">Términos de uso</a> · 
     <a href="#">Política de privacidad</a> · 
     <a href="#">Ayuda</a>
 </footer>
 
-<!-- SCRIPT DINÁMICO -->
 <script>
-document.addEventListener("DOMContentLoaded", () => {
+/* ================================
+   CARGAR PLAN DESDE localStorage
+================================ */
+const plan = localStorage.getItem("plan") || "standard_ads";
 
-    const planName = localStorage.getItem("planName");
-    const planPrice = localStorage.getItem("planPrice");
+const planData = {
+    premium: {
+        price: "49.900 COP/mes",
+        name: "Plan Premium",
+        desc: "Incluye: 4K UHD • 4 dispositivos • Sin anuncios"
+    },
+    standard: {
+        price: "36.900 COP/mes",
+        name: "Plan Estándar",
+        desc: "Incluye: Full HD • 2 dispositivos"
+    },
+    standard_ads: {
+        price: "24.900 COP/mes",
+        name: "Estándar con anuncios",
+        desc: "Incluye: Full HD • 2 dispositivos • Con anuncios"
+    }
+};
 
-    document.getElementById("finalPrice").innerText = `COP ${planPrice}/mes`;
-    document.getElementById("planName").innerText = planName;
-
-    const resumen = {
-        "Premium": `
-            ✔ Hasta 4 pantallas simultáneas<br>
-            ✔ Calidad 4K UHD + HDR<br>
-            ✔ Dolby Atmos<br>
-            ✔ Descargas ilimitadas<br>
-            ✔ Sin anuncios
-        `,
-        "Estándar": `
-            ✔ 2 pantallas simultáneas<br>
-            ✔ Full HD<br>
-            ✔ Descargas disponibles<br>
-            ✔ Sin anuncios
-        `,
-        "Estándar con anuncios": `
-            ✔ 2 pantallas simultáneas<br>
-            ✔ Calidad HD<br>
-            ❌ No permite descargas<br>
-            ⚠ Incluye anuncios
-        `
-    };
-
-    document.getElementById("planSummary").innerHTML =
-        resumen[planName] || "Plan seleccionado";
-});
+// Mostrar en pantalla
+document.getElementById("finalPrice").innerText = planData[plan].price;
+document.getElementById("planName").innerText = planData[plan].name;
+document.getElementById("planSummary").innerText = planData[plan].desc;
 </script>
 
 </body>
