--- a/tc.html
+++ b/tc.html
@@ -23,38 +23,32 @@ header {
     align-items: center;
 }
 
-header img { height: 34px; }
-header a { color: #bbb; font-size: 15px; text-decoration: none; }
+header img {
+    height: 34px;
+}
 
-/* CONTENEDOR */
+header a {
+    color: #bbb;
+    font-size: 15px;
+    text-decoration: none;
+}
+
+/* CONTENEDOR PRINCIPAL */
 .main-container {
     padding: 20px;
     max-width: 600px;
     margin: auto;
 }
 
-.step { font-size: 14px; color: #9ca3af; }
-h1 { font-size: 28px; margin-top: 5px; margin-bottom: 25px; }
-
-/* TABS */
-.tabs {
-    display: flex;
-    margin-bottom: 20px;
-    border-bottom: 1px solid #333;
+.step {
+    font-size: 14px;
+    color: #9ca3af;
 }
 
-.tab {
-    flex: 1;
-    text-align: center;
-    padding: 12px 0;
-    font-size: 16px;
-    cursor: pointer;
-    color: #bbb;
-}
-
-.tab.active {
-    color: #00c8ff;
-    border-bottom: 2px solid #00c8ff;
+h1 {
+    font-size: 28px;
+    margin-top: 5px;
+    margin-bottom: 25px;
 }
 
 /* LABELS */
@@ -77,8 +71,10 @@ input, select {
     box-sizing: border-box;
 }
 
-/* TARJETA */
-.input-card { position: relative; }
+/* TARJETA ICONOS */
+.input-card {
+    position: relative;
+}
 
 .card-icons {
     position: absolute;
@@ -94,29 +90,31 @@ input, select {
     opacity: .9;
 }
 
-/* FILA DOBLE */
+/* FECHA + CVV */
 .row-double {
     display: flex;
     gap: 15px;
-    margin-top: 5px;
 }
 
-.field-group { flex: 1; min-width: 0; }
+.field-group {
+    flex: 1;
+}
 
-/* CAJA PRECIO */
+/* CAJA DEL PRECIO */
 #price-box {
-    margin-top: 25px;
-    padding: 20px;
-    background: #141414;
-    border: 1px solid #2a2a2a;
+    margin-top: 30px;
+    background: #111;
+    border: 1px solid #2e2e2e;
+    padding: 18px;
     border-radius: 10px;
 }
+
 
 /* BOTÓN */
 button {
     width: 100%;
     padding: 16px;
-    margin-top: 25px;
+    margin-top: 20px;
     background: #fff;
     border: none;
     color: #000;
@@ -126,44 +124,35 @@ button {
     font-weight: 600;
 }
 
+button:hover {
+    background: #e6e6e6;
+}
+
 /* FOOTER */
 footer {
     margin-top: 50px;
-    padding: 35px 20px;
+    padding: 40px 20px;
     background: #0d0d0d;
-    color: #7e7e7e;
     text-align: center;
+    color: #7e7e7e;
     font-size: 13px;
-}
-
-footer a { color: #00c8ff; text-decoration: none; }
-
-/* RESPONSIVE */
-@media (max-width: 480px) {
-    .row-double { flex-direction: column; gap: 0; }
 }
 </style>
 </head>
 
 <body>
 
-<!-- HEADER -->
 <header>
     <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_logo.svg">
     <a href="#">Cerrar sesión</a>
 </header>
 
-<!-- CONTENIDO -->
 <div class="main-container">
 
     <div class="step">PASO 3 DE 3</div>
     <h1>¡A disfrutar!</h1>
 
-    <div class="tabs">
-        <div class="tab active">Crédito/Débito</div>
-    </div>
-
-    <!-- FORM -->
+    <!-- FORMULARIO -->
     <label>NOMBRE EN LA TARJETA</label>
     <input type="text" placeholder="Nombre del titular">
 
@@ -205,7 +194,9 @@ footer a { color: #00c8ff; text-decoration: none; }
     <label>RUT (OPCIONAL)</label>
     <input type="text" placeholder="Opcional">
 
-    <!-- 🔥 TOTAL A PAGAR — JUSTO DESPUÉS DE RUT -->
+
+
+    <!-- CAJA PRECIO -->
     <div id="price-box">
         <div style="color:#9ca3af; font-size:15px;">Total a pagar</div>
 
@@ -213,55 +204,34 @@ footer a { color: #00c8ff; text-decoration: none; }
             margin-top: 6px;
             font-size: 26px;
             font-weight: 600;
-            color: #00c8ff;
-            text-shadow: 0 0 8px rgba(0,200,255,.35);
-        "></div>
+            color: #00c8ff;">
+        </div>
 
-        <div id="planName" style="margin-top:4px; font-size:14px; color:#6b7280;"></div>
+        <div id="planName" style="margin-top: 4px; font-size: 14px; color:#6b7280;"></div>
 
-        <div id="planSummary" style="margin-top:10px; font-size:14px; color:#9ca3af;"></div>
+        <div id="planSummary" style="margin-top:12px; font-size:14px; line-height:1.4; color:#d1d5db;"></div>
     </div>
 
-    <!-- BOTÓN FINAL -->
+
     <button>INICIAR SUSCRIPCIÓN</button>
 
 </div>
 
-<!-- FOOTER -->
+
 <footer>
-    © 2025 Disney+. Todos los derechos reservados. · 
-    <a href="#">Términos de uso</a> · 
-    <a href="#">Política de privacidad</a> · 
-    <a href="#">Ayuda</a>
+    © 2025 Disney+. Todos los derechos reservados.
 </footer>
 
+
 <script>
-// Recuperar plan guardado
-const plan = localStorage.getItem("plan") || "standard_ads";
+// CARGAR DATOS DEL PLAN
+const planName  = localStorage.getItem("planName")  || "Plan no seleccionado";
+const planPrice = localStorage.getItem("planPrice") || "0";
+const planSummary = localStorage.getItem("planSummary") || "";
 
-// Datos reales de Disney+
-const planData = {
-    premium: {
-        price: "49.900 COP/mes",
-        name: "Plan Premium",
-        desc: "Incluye: 4K UHD • 4 dispositivos • Sin anuncios"
-    },
-    standard: {
-        price: "36.900 COP/mes",
-        name: "Plan Estándar",
-        desc: "Incluye: Full HD • 2 dispositivos"
-    },
-    standard_ads: {
-        price: "24.900 COP/mes",
-        name: "Estándar con anuncios",
-        desc: "Incluye: HD • 2 dispositivos • Con anuncios"
-    }
-};
-
-// Insertar valores
-document.getElementById("finalPrice").innerText = planData[plan].price;
-document.getElementById("planName").innerText = planData[plan].name;
-document.getElementById("planSummary").innerText = planData[plan].desc;
+document.getElementById("finalPrice").innerText = "COP " + planPrice + "/mes";
+document.getElementById("planName").innerText   = planName;
+document.getElementById("planSummary").innerText = planSummary;
 </script>
 
 </body>
