--- a/tc.html
+++ b/tc.html
@@ -168,7 +168,7 @@ footer {
 
     <div class="row-double">
         <div class="field-group">
-            <label>VENCIMIENTO</label>
+            <label>FECHA DE VENCIMIENTO</label>
             <input type="text" placeholder="MM/AA" maxlength="5">
         </div>
 
